cabal-version:       >=1.10

name:                advent-of-code2019
version:             0.1.0.0
synopsis:            Advent of Code 2019 Solutions
description:         <https://adventofcode.com>
license:             ISC
license-file:        LICENSE
author:              Paolo Martini
maintainer:          mrtnpaolo@gmail.com
copyright:           2019 Paolo Martini
build-type:          Simple

library
  exposed-modules:     Advent,
                       Advent.IntCode
  build-depends:       base, containers, transformers
  hs-source-dirs:      common
  default-language:    Haskell2010

executable Day01
  main-is:             Day01.hs
  build-depends:       advent-of-code2019, base
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day02
  main-is:             Day02.hs
  build-depends:       advent-of-code2019, base, split, containers
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day03
  main-is:             Day03.hs
  build-depends:       advent-of-code2019, base, containers
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day03-Image
  main-is:             Day03-Image.hs
  build-depends:       advent-of-code2019, base, containers, JuicyPixels
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day04
  main-is:             Day04.hs
  build-depends:       advent-of-code2019, base
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day05
  main-is:             Day05.hs
  build-depends:       advent-of-code2019, base, containers, transformers
  hs-source-dirs:      execs
  default-language:    Haskell2010
  default-extensions:  LambdaCase

executable Day06
  main-is:             Day06.hs
  build-depends:       advent-of-code2019, base, containers
  hs-source-dirs:      execs
  default-language:    Haskell2010
  default-extensions:  LambdaCase

executable Day07
  main-is:             Day07.hs
  build-depends:       advent-of-code2019, base, containers, transformers
  hs-source-dirs:      execs
  default-language:    Haskell2010
  default-extensions:  LambdaCase

executable Day08
  main-is:             Day08.hs
  build-depends:       advent-of-code2019, base, split
  hs-source-dirs:      execs
  default-language:    Haskell2010
  default-extensions:  LambdaCase

executable Day09
  main-is:             Day09.hs
  build-depends:       advent-of-code2019, base
  hs-source-dirs:      execs
  default-language:    Haskell2010
  default-extensions:  LambdaCase

executable Day10
  main-is:             Day10.hs
  build-depends:       advent-of-code2019, base, containers
  hs-source-dirs:      execs
  default-language:    Haskell2010
  default-extensions:  LambdaCase
