cabal-version:       >=1.10

name:                advent-of-code2019
version:             0.1.0.0
synopsis:            Advent of Code 2019 Solutions
description:         <https://adventofcode.com>
license:             ISC
license-file:        LICENSE
author:              Paolo Martini
maintainer:          mrtnpaolo@gmail.com
copyright:           2019 Paolo Martini
build-type:          Simple

library
  exposed-modules:     Advent,
                       Advent.IntCode,
                       Advent.Queue,
                       Advent.Search
  build-depends:       base, containers, transformers
  hs-source-dirs:      common
  default-language:    Haskell2010

executable Day01
  main-is:             Day01.hs
  build-depends:       advent-of-code2019, base
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day02
  main-is:             Day02.hs
  build-depends:       advent-of-code2019, base, split, containers
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day03
  main-is:             Day03.hs
  build-depends:       advent-of-code2019, base, containers
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day03-Image
  main-is:             Day03-Image.hs
  build-depends:       advent-of-code2019, base, containers, JuicyPixels
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day04
  main-is:             Day04.hs
  build-depends:       advent-of-code2019, base
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day05
  main-is:             Day05.hs
  build-depends:       advent-of-code2019, base, containers, transformers
  hs-source-dirs:      execs
  default-language:    Haskell2010
  default-extensions:  LambdaCase

executable Day06
  main-is:             Day06.hs
  build-depends:       advent-of-code2019, base, containers
  hs-source-dirs:      execs
  default-language:    Haskell2010
  default-extensions:  LambdaCase

executable Day07
  main-is:             Day07.hs
  build-depends:       advent-of-code2019, base, containers, transformers
  hs-source-dirs:      execs
  default-language:    Haskell2010
  default-extensions:  LambdaCase

executable Day08
  main-is:             Day08.hs
  build-depends:       advent-of-code2019, base, split
  hs-source-dirs:      execs
  default-language:    Haskell2010
  default-extensions:  LambdaCase

executable Day09
  main-is:             Day09.hs
  build-depends:       advent-of-code2019, base
  hs-source-dirs:      execs
  default-language:    Haskell2010
  default-extensions:  LambdaCase

executable Day10
  main-is:             Day10.hs
  build-depends:       advent-of-code2019, base, containers
  hs-source-dirs:      execs
  default-language:    Haskell2010
  default-extensions:  LambdaCase

executable Day11
  main-is:             Day11.hs
  build-depends:       advent-of-code2019, base, containers
  hs-source-dirs:      execs
  default-language:    Haskell2010
  default-extensions:  LambdaCase

executable Day12
  main-is:             Day12.hs
  build-depends:       advent-of-code2019, base
  hs-source-dirs:      execs
  default-language:    Haskell2010
  default-extensions:  LambdaCase

executable Day13
  main-is:             Day13.hs
  build-depends:       advent-of-code2019, base, containers
  hs-source-dirs:      execs
  default-language:    Haskell2010
  default-extensions:  LambdaCase

executable Day14
  main-is:             Day14.hs
  build-depends:       advent-of-code2019, base, split, containers, fgl
  hs-source-dirs:      execs
  default-language:    Haskell2010
  default-extensions:  LambdaCase

executable Day15
  main-is:             Day15.hs
  build-depends:       advent-of-code2019, base, containers, random
  hs-source-dirs:      execs
  default-language:    Haskell2010
  default-extensions:

executable Day16
  main-is:             Day16.hs
  build-depends:       advent-of-code2019, base, containers, vector
  hs-source-dirs:      execs
  default-language:    Haskell2010
  default-extensions:

executable Day17
  main-is:             Day17.hs
  build-depends:       advent-of-code2019, base, containers, vector
  hs-source-dirs:      execs
  default-language:    Haskell2010
  default-extensions:

executable Day18
  main-is:             Day18.hs
  build-depends:       advent-of-code2019, base, containers, fgl
  hs-source-dirs:      execs
  default-language:    Haskell2010
  default-extensions:

executable Day19
  main-is:             Day19.hs
  build-depends:       advent-of-code2019, base, containers
  hs-source-dirs:      execs
  default-language:    Haskell2010
  default-extensions:

executable Day20
  main-is:             Day20.hs
  build-depends:       advent-of-code2019, base, containers
  hs-source-dirs:      execs
  default-language:    Haskell2010
  default-extensions:

executable Day21
  main-is:             Day21.hs
  build-depends:       advent-of-code2019, base
  hs-source-dirs:      execs
  default-language:    Haskell2010
  default-extensions:
